# Memexia

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md
docs/: 实现方案大纲.md  项目文档.md
examples/: explore_oxigraph.rs
scripts/: build.sh
src/: lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/core/: indexer.rs  mod.rs  object.rs  parser.rs  repository.rs  watch_config.rs  watcher.rs
src/core/parser/: frontmatter.rs  wiki_link.rs
src/storage/: edge.rs  graph.rs  mod.rs  node.rs  nquads.rs  oxigraph.rs
src/vcs/: git_engine.rs  graph_history.rs  mod.rs  rollback.rs
tests/: test_main.rs  test_repository.rs  test_vcs.rs
