[package]
name = "memexia"
version = "0.1.0"
edition = "2021"
authors = ["Chen Xu <Woyerpa@outlook.com>"]
description = "A personal knowledge graph system with infinite thought exploration"
license = "GPL-3.0"
repository = "https://github.com/ChenXu233/Memexia"
readme = "README.md"
keywords = ["knowledge-graph", "note-taking", "ai", "graph-database"]
categories = ["science", "database", "filesystem"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.53", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3"
oxigraph = "0.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"
toml = "0.9.8"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
pathdiff = "0.2.3"
pulldown-cmark = "0.13.0"
regex = "1.12.1"
yaml-rust2 = "0.11.0"
notify = "8.2.0"

[dev-dependencies]
tempfile = "3.10"
